Added check to ensure only author is able to update blog